Added a working  Resume download button and css animation to profile picture.

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Web site created using create-react-app" />
 
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Eczar:wght@500&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/55d2edbfff.js" crossorigin="anonymous"></script>
+    <!-- End Fonts -->
+
     <!-- CSS Styles -->
     <link rel="stylesheet" type="text/css" href="src/main.css">
     <!-- End CSS Styles -->
