Changing the entire design of the website into a fully responsive layout.

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Web site created using create-react-app" />
+    <meta name="description" content="Matthew Palmer's Online Resume" />
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Eczar:wght@500&display=swap" rel="stylesheet">
@@ -14,7 +14,7 @@
     <link rel="stylesheet" type="text/css" href="src/main.css">
     <!-- End CSS Styles -->
 
-    <title>React App</title>
+    <title>MRP | Technologies</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
